--- a/UBA/templates/pages/index.html
+++ b/UBA/templates/pages/index.html
@@ -1,8 +1,11 @@
 {% extends 'base.html'%}
 
+{%block content%}
+   
 <!DOCTYPE html>
 <html dir="ltr" lang="en">
 
+   
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,3 +43,4 @@
 
 </html>
 
+{% endblock content%}
