--- a/UBA/templates/base.html
+++ b/UBA/templates/base.html
@@ -4,3 +4,8 @@
         background-color: rgb(202, 187, 187);
     }
 </style>
+{% block content %}
+<p>hi</p>
+{% endblock content %}
+
+{% include 'parts/Foter.html' %} 
