--- a/UBA/templates/pages/index.html
+++ b/UBA/templates/pages/index.html
@@ -1,7 +1,8 @@
 {% extends 'base.html'%}
-
+{% load static %}
 {%block content%}
    
 <h1>Hello</h1>
+<img src="{% static 'img/logo.png'%}" alt="">
 
 {% endblock content%}
