--- a/UBA/templates/base.html
+++ b/UBA/templates/base.html
@@ -1,7 +1,7 @@
+{% extends 'parts/NavBar.html'%}
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
 {% block content %}
-<p>hi</p>
+<p>HELLO</p>
 {% endblock content %}
 
-{% include 'parts/Foter.html' %} 
