--- a/UBA/templates/parts/NavBar.html
+++ b/UBA/templates/parts/NavBar.html
@@ -1,4 +1,2 @@
-{%include 'part/Foter.html'%}
-{%block content%}
-<h1>Hello</h1>
-{% endblock content%}
+<span><a href="">home</a></span>
+<span><a href="">about</a></span>
