--- a/UBA/templates/base.html
+++ b/UBA/templates/base.html
@@ -1,7 +1,8 @@
 {% extends 'parts/NavBar.html'%}
-{% load static %}
+ {% load static %} 
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
 {% block content %}
-<p>HELLO</p>
+<h1> Hello </h1>
 {% endblock content %}
 
