--- a/UBA/templates/parts/NavBar.html
+++ b/UBA/templates/parts/NavBar.html
@@ -1,2 +1,3 @@
-<span><a href="">home</a></span>
-<span><a href="">about</a></span>
+ 
+    <span><a href="{% url 'Register' %}">Login</a></span>
+<span><a href=" {% url 'Login' %}">Register</a></span>
